# azcoin-stratum-gateway

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  docker-entrypoint.sh  rebuild.ps1  tmp_status.txt
.github/workflows/: build.yml  docker.yml
crates/gateway_v1/: Cargo.toml
crates/gateway_v1/src/: main.rs  version.rs
crates/gateway_v1/src/gbt/: poller.rs
crates/sv2_core/: Cargo.toml
crates/sv2_core/src/: lib.rs
docs/adr/: 0001-stratum-gateway-architecture.md
