[package]
name = "gateway_v1"
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
sv2_core = { path = "../sv2_core" }
tokio = { version = "1", features = ["net", "rt", "sync", "time"] }
tracing = "0.1"